# argo-containerless-plugin

./: Cargo.toml  Dockerfile  Makefile  README.md
argo/: README.md  containerless-executor-plugin-configmap.yaml  multi-step-workflow.yaml  plugin.yaml  workflow.yaml
src/: argo.rs  git.rs  main.rs  python.rs  runner.rs
test/node/example-project/: package-lock.json  package.json  tsconfig.json
test/python/example-project/: pyproject.toml
test/python/example-project/src/: example.py
