[package]
name = "containerless"
description = "Run containerless Node/Python apps directly as Argo Workflow step"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
env_logger = "0.9.1"
snafu = "0.7.1"
regex = "1.6.0"
git2 = "0.15"