[tool.poetry]
name = "example-project-workflow"
version = "0.1.0"
description = "Example Workflow step"
authors = ["Peter Evers <pevers90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
